--- a/webproject/webblog/template/login.html
+++ b/webproject/webblog/template/login.html
@@ -487,7 +487,7 @@ font-family: 'Pacifico', cursive;
 
     <div class="login">
         <div class="container">
-            <h1><bea>Register<br><h2>Create your account</h2></bea></h1>
+            <h1><bea>Login<br><h2>Login your account</h2></bea></h1>
             <div class="login-form">
                 <form name="Form1" action="check/" method="post">
                     {%csrf_token%}
