--- a/webproject/webblog/template/menu.html
+++ b/webproject/webblog/template/menu.html
@@ -163,7 +163,6 @@
 </head>
 
 <body class="container mt-4">
-<!--    <h1 class="mb-4">點餐系統</h1>-->
 
     {% csrf_token %}
      <section id="gtco-menu" class="section-padding">
@@ -189,7 +188,7 @@
                         </div>
                         <div class="menus d-flex align-items-center">
                             <div class="menu-img rounded-circle">
-                                <img src="https://foodtracer.taipei.gov.tw/Backend/upload/product/97220043/97220043_13.png" alt="{{ food.1 }}" class="img-fluid" style="max-width: 100px;">
+                                <img src="{{food.6}}" alt="{{ food.1 }}" class="img-fluid" style="width: 125px; ">
                             </div>
                             <div class="text-wrap">
                                 <div class="row align-items-start">
